--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>едадом - Главная страница</title>
+    <link rel="stylesheet" href="./assets/foundation.css">
+    <link rel="stylesheet" href="./assets/styles.min.css">
 </head>
 <body>
-    
+    <div class="main">
+        <header>
+            1
+        </header>
+        <main>
+            2
+        </main>
+        <footer>
+            3
+        </footer>
+    </div>
+
+    <script src="./assets/js/vendor.js"></script>
+    <script src="./assets/js/foundation.js"></script>
 </body>
 </html>
